@@ -1,5 +1,8 @@
 2011-01-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
+	* testsuite/testClasp.cpp: Fix signature creation for
+	testClaspResultSmall testcase.
+
 	* testsuite/testBlockingClasp.cpp: Only parse 3 models.
 
 	* testsuite/testCombination.cpp: Fix BeliefSet instantiation.
